--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <header class="text-center mb-12">
                 <div class="flex justify-between items-center w-full mb-4">
                     <!-- تم تغيير المسار ليشير إلى مجلد محلي -->
-                    <img src="images/ph.png" alt="شعار صندوق استصلاح الأراضي" class="h-40 w-auto object-contain">
+                    <img src="images/ph.png" alt="ph" class="h-40 w-auto object-contain">
                     
                     <div class="flex-grow">
                          <h1 class="text-3xl md:text-4xl font-extrabold text-[#285430]">
@@ -95,7 +95,7 @@
                     </div>
                     
                     <!-- تم تغيير المسار ليشير إلى مجلد محلي -->
-                    <img src="images/pho.png" alt="شعار محافظة الوادي الجديد" class="h-40 w-auto object-contain">
+                    <img src="images/pho.png" alt="pho" class="h-40 w-auto object-contain">
                 </div>
                 <p class="text-lg text-[#557A46]">نظرة شاملة لدعم اتخاذ القرار للسلطات العليا - بيانات محدثة حتى تاريخ اليوم</p>
             </header>
