--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </section>
 
                 <section id="investors" class="mb-12">
-                    <h2 class="section-title">📊 مؤشرات فاعلية المستثمرين</h2>
+                    <h2 class="section-title">📊 مؤشرات فاعلية المستثمرين علي المنصة</h2>
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8 text-center">
                         <div class="kpi-card">
                             <h3 class="kpi-title">عدد المستثمرين المسجلين</h3>
